# bitpatterns

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  README.tpl  make_readme.sh
bitpatterns/: Cargo.toml
bitpatterns-proc-macro/: Cargo.toml  README.md
bitpatterns-proc-macro/src/: lib.rs
bitpatterns/src/: lib.rs  macros.rs
