[package]
name = "bitpatterns"
version = "0.1.0"
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/zachmatson/bitpatterns/bitpatterns/"
homepage = "https://github.com/zachmatson/bitpatterns/"
documentation = "https://docs.rs/bitpatterns"
readme = "README.md"
keywords = ["bitwise", "patterns", "bits", "macro"]
categories = ["no-std"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitpatterns-proc-macro = { path = "../bitpatterns-proc-macro", version = "=0.1.0" }
